Fix a crash when copy-pasting a group with vector layers

The node should be explicitly detached from the image before
this image gets deteled. Normally it is done by the image's
destructor, but the copies layers are not officially added
to the image.

BUG:457154